@@ -1,6 +1,7 @@
 45
 ================
 
+17/05/21 Stop form checkbox labels taking up all width
 17/05/21 Use exact breed matching for SavourLife
 15/05/21 Only calculate total alerts from visible alerts
 12/05/21 csvimport: support foster capacity (Saggi Neumann)
